--- a/homepage/html/use-case/brands.html
+++ b/homepage/html/use-case/brands.html
@@ -1,3 +1,4 @@
+
 <main class="page page--use-case page--use-case-brands">
     <section class="wrapper wrapper--side-scroll">
         <aside class="wrapper-left">
@@ -75,7 +76,7 @@
                         </header>
                         <div class="card-footer">
                             <figure class="card-footer-figure">
-                                <img style="width: 111.5%;" class="card-footer-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/brands/brands-time.webp"/>
+                                <img style="width: 111.5%;" class="card-footer-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/brands/time.webp"/>
                             </figure>
                         </div>
                     </article>
@@ -93,7 +94,7 @@
                         </header>
                         <div class="card-footer">
                             <figure class="card-footer-figure">
-                                <img style="width: 104%; transform: translateY(-1%); left: auto; right: 0;" class="card-footer-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/brands/brands-branded.webp"/>
+                                <img style="width: 100%; transform: translateY(-1%); left: auto; right: 0;" class="card-footer-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/brands/opinions.webp"/>
                             </figure>
                         </div>
                     </article>
@@ -129,7 +130,7 @@
                         </header>
                         <div class="card-footer">
                             <figure class="card-footer-figure">
-                                <img style="width: 100.5%;" class="card-footer-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/brands/brands-sponsor.webp"/>
+                                <img style="width: 100.5%;" class="card-footer-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/brands/research.webp"/>
                             </figure>
                         </div>
                     </article>
@@ -147,7 +148,7 @@
                         </header>
                         <div class="card-footer">
                             <figure class="card-footer-figure">
-                                <img style="width: 100.5%;" class="card-footer-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/brands/brands-lead.webp"/>
+                                <img style="width: 100.5%;" class="card-footer-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/brands/target.webp"/>
                             </figure>
                         </div>
                     </article>
@@ -181,9 +182,9 @@
                                 Learn more
                             </a>
                         </header>
-                        <div class="card-footer" style="padding-bottom: 94%">
+                        <div class="card-footer">
                             <figure class="card-footer-figure">
-                                <img style="width: 100.5%;" class="card-footer-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/brands/brands-profile.webp"/>
+                                <img style="width: 100.5%;" class="card-footer-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/brands/leads.webp"/>
                             </figure>
                         </div>
                     </article>
@@ -199,9 +200,9 @@
                                 Learn more
                             </a>
                         </header>
-                        <div class="card-footer" style="padding-bottom: 94%">
+                        <div class="card-footer">
                             <figure class="card-footer-figure">
-                                <img style="width: 100.5%;" class="card-footer-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/brands/brands-personalize.webp"/>
+                                <img style="width: 100.5%;" class="card-footer-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/brands/recs.webp"/>
                             </figure>
                         </div>
                     </article>
@@ -211,7 +212,7 @@
     </section>
 
 
-            <section class="section section--squeeze section--quotes-new section--quotes-new-2">
+            <section class="section section--squeeze section--quotes-new section--quotes-new-2 section--quotes-highlight">
                 <div class="section-header">
                     <h6 class="section-header-heading">What our clients say</h6>
                 </div>
