--- a/homepage/html/use-case/nonprofits.html
+++ b/homepage/html/use-case/nonprofits.html
@@ -48,11 +48,11 @@
         </div>
     </section>
     
-    <!-- PUBLISH -->
+    <!-- BUILD -->
     <section class="wrapper wrapper--side-scroll">
         <aside class="wrapper-left">
             <figure class="wrapper-left-figure">
-                <img class="wrapper-left-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/publishers/publishers-engagement.webp"/>
+                <img class="wrapper-left-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/nonprofit/nonprofit-change.webp"/>
             </figure>
         </aside>
         <div class="wrapper-right">
@@ -75,7 +75,7 @@
                         </header>
                         <div class="card-footer">
                             <figure class="card-footer-figure">
-                                <img style="width: 111.5%;" class="card-footer-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/publishers/publishers-time.webp"/>
+                                <img style="width: 100%;" class="card-footer-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/nonprofit/educate.webp"/>
                             </figure>
                         </div>
                     </article>
@@ -93,7 +93,25 @@
                         </header>
                         <div class="card-footer">
                             <figure class="card-footer-figure">
-                                <img style="width: 104%; transform: translateY(-1%); left: auto; right: 0;" class="card-footer-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/publishers/publishers-branded.webp"/>
+                                <img style="width: 100%; transform: translateY(-1%); left: auto; right: 0;" class="card-footer-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/nonprofit/share.webp"/>
+                            </figure>
+                        </div>
+                    </article>
+                    <article href="https://www.riddle.com/problems-solved/unlock-deep-customer-insights" class="card card--gradient card--gradient-horizontal card--gradient-fill-2">
+                        <header class="card-header">
+                            <h5 class="card-header-heading">
+                                Make easy-to-build quizzes for any budget
+                            </h5>
+                            <p class="card-header-body">
+                                Non-profits get a 20% discount on all purchases, along with unlimited quizzes, leads, and traffic. And with our simple visual builder, you can quickly make compelling content without any coding.
+                            </p>
+                            <a href="#" class="card-header-action">
+                                Learn more
+                            </a>
+                        </header>
+                        <div class="card-footer">
+                            <figure class="card-footer-figure">
+                                <img style="width: 100%; transform: translateY(-1%); left: auto; right: 0;" class="card-footer-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/nonprofit/build.webp"/>
                             </figure>
                         </div>
                     </article>
@@ -102,11 +120,11 @@
         </div>
     </section>
     
-    <!-- MONETIZE -->
+    <!-- DONORS -->
     <section class="wrapper wrapper--side-scroll">
         <aside class="wrapper-left">
             <figure class="wrapper-left-figure">
-                <img class="wrapper-left-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/publishers/publishers-monetize.webp"/>
+                <img class="wrapper-left-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/nonprofit/nonprofit-user.webp"/>
             </figure>
         </aside>
         <div class="wrapper-right">
@@ -129,7 +147,7 @@
                         </header>
                         <div class="card-footer">
                             <figure class="card-footer-figure">
-                                <img style="width: 100.5%;" class="card-footer-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/publishers/publishers-sponsor.webp"/>
+                                <img style="width: 100.5%;" class="card-footer-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/nonprofit/donor.webp"/>
                             </figure>
                         </div>
                     </article>
@@ -147,11 +165,11 @@
                         </header>
                         <div class="card-footer">
                             <figure class="card-footer-figure">
-                                <img style="width: 100.5%;" class="card-footer-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/publishers/publishers-lead.webp"/>
+                                <img style="width: 98.5%;" class="card-footer-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/nonprofit/insight.webp"/>
                             </figure>
                         </div>
                     </article>
-                    <article href="https://www.riddle.com/problems-solved/unlock-deep-customer-insights" class="card card--gradient card--gradient-horizontal card--gradient-flip card--gradient-fill-2">
+                    <article href="https://www.riddle.com/problems-solved/unlock-deep-customer-insights" class="card card--gradient card--gradient-flip card--gradient-horizontal card--gradient-flip card--gradient-fill-2">
                         <header class="card-header">
                             <h5 class="card-header-heading">
                                 Track, measure, and optimize quizzes
@@ -165,7 +183,7 @@
                         </header>
                         <div class="card-footer">
                             <figure class="card-footer-figure">
-                                <img style="width: 100.5%;" class="card-footer-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/publishers/publishers-lead.webp"/>
+                                <img style="width: 73.5%; top: 50%; transform: translate(-50%,-50%);" class="card-footer-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/nonprofit/track.webp"/>
                             </figure>
                         </div>
                     </article>
@@ -175,7 +193,7 @@
     </section>
 
 
-            <section class="section section--squeeze section--quotes-new section--quotes-new-2">
+            <section class="section section--squeeze section--quotes-new section--quotes-new-2 section--quotes-highlight">
                 <div class="section-header">
                     <h6 class="section-header-heading">What our clients say</h6>
                 </div>
