--- a/homepage/html/use-case/sports.html
+++ b/homepage/html/use-case/sports.html
@@ -16,7 +16,7 @@
                 </div>
             </div>
             <figure class="wrapper-left-figure">
-                <img class="wrapper-left-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/sporrts/sporrts.webp"/>
+                <img class="wrapper-left-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/sports/sports.webp"/>
             </figure>
         </aside>
         <div class="wrapper-right">
@@ -181,7 +181,7 @@
                                 Learn more
                             </a>
                         </header>
-                        <div class="card-footer" style="padding-bottom: 94%">
+                        <div class="card-footer" style="padding-bottom:61%">
                             <figure class="card-footer-figure">
                                 <img style="width: 100.5%;" class="card-footer-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/sports/insights.webp"/>
                             </figure>
@@ -199,7 +199,7 @@
                                 Learn more
                             </a>
                         </header>
-                        <div class="card-footer" style="padding-bottom: 94%">
+                        <div class="card-footer" style="padding-bottom:61%">
                             <figure class="card-footer-figure">
                                 <img style="width: 100.5%;" class="card-footer-figure-image" src="https://jaydenanderson.github.io/homepage/use-case/sports/promo.webp"/>
                             </figure>
@@ -211,7 +211,7 @@
     </section>
 
 
-            <section class="section section--squeeze section--quotes-new section--quotes-new-2">
+            <section class="section section--squeeze section--quotes-new section--quotes-new-2 section--quotes-highlight">
                 <div class="section-header">
                     <h6 class="section-header-heading">What our clients say</h6>
                 </div>
