--- a/homepage/html/use-case/agencies.html
+++ b/homepage/html/use-case/agencies.html
@@ -211,7 +211,7 @@
     </section>
 
 
-            <section class="section section--squeeze section--quotes-new section--quotes-new-2">
+            <section class="section section--squeeze section--quotes-new section--quotes-new-2 section--quotes-highlight">
                 <div class="section-header">
                     <h6 class="section-header-heading">What our clients say</h6>
                 </div>
